--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1290,6 +1290,7 @@ html[data-page=index-german] .h4-title {
 }
 
 .warning-paragraph {
+  display: none;
   font-size: 1.5rem;
   text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px, 2px 2px 2px rgba(255, 255, 255, 0.04);
 }
