--- a/Styles/mobileResume.css
+++ b/Styles/mobileResume.css
@@ -56,7 +56,7 @@ a:visited {
 
 .book {
   position: relative;
-  width: 90%;
+  width: 70%;
   height: 100%;
   display: flex;
   perspective: 250rem;
@@ -66,7 +66,6 @@ a:visited {
 
 .book-page {
   box-shadow: -0.6rem 0.6rem 0.6rem rgba(0, 0, 0, 0.1);
-  position: relative !important;
   width: 100% !important;
   height: 100%;
   background: var(--pages-color);
@@ -326,12 +325,21 @@ a:visited {
 }
 @media (max-width: 480px) {
   .book {
-    width: 100%;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0.4rem;
   }
   .book-page {
     width: 100%;
     margin: 1rem;
     margin-left: 25%;
+  }
+  #resume-document {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .profile-page .social-media {
     margin-left: 3%;
