--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1825,7 +1825,10 @@ a:hover ~ .custom-cursor {
 }
 
 .container-timeline:hover {
-  border: #a009f7 0.2rem outset;
+  border-right: #a009f7 0.2rem outset;
+  border-bottom: #a009f7 0.2rem outset;
+  border-left: rgb(248, 86, 210) 0.2rem outset;
+  border-top: rgb(248, 86, 210) 0.2rem outset;
 }
 
 .container-timeline::before {
