--- a/Styles/_timelineStyle.scss
+++ b/Styles/_timelineStyle.scss
@@ -14,6 +14,9 @@
     cursor: pointer;
   }
 }
+// .timeline-item:nth-of-type(1) {
+//   display: none;
+// }
 .container-timeline {
   width: 80%;
   height: auto;
@@ -73,7 +76,7 @@
   width: 45%;
   height: auto;
   padding: 1.5rem 1rem;
-  margin: 2rem 0.7rem;
+  margin: 5rem 0.7rem;
   background-color: $paragraph-BG;
   border-radius: 2rem;
   box-shadow: 1px 1px 25px #0000005c;
