timeline-english filter js file

--- a/Styles/_timelineStyle.scss
+++ b/Styles/_timelineStyle.scss
@@ -117,7 +117,7 @@
   clear: right;
   border: $icon-bg 0.2rem outset;
   transform: translateX(-0.1rem);
-  text-align: right;
+  text-align: left;
 }
 .container-timeline ul li:nth-child(even) {
   float: right;
