--- a/Styles/style.css
+++ b/Styles/style.css
@@ -277,6 +277,36 @@ button:hover {
   transition: 1s;
 }
 
+.disabled-link {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.disabled-link button {
+  cursor: not-allowed;
+}
+
+.recaptcha-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  border-radius: 2rem;
+}
+
+.g-recaptcha {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0.2rem #a009f7 outset;
+  border-radius: 1rem;
+  padding: 0;
+}
+
+.recaptcha-container .g-recaptcha {
+  border: 0.6rem #a009f7 outset;
+}
+
 @media screen and (max-width: 1200px) {
   .sub-menu ul {
     display: flex;
