--- a/Styles/_basicSettings.scss
+++ b/Styles/_basicSettings.scss
@@ -266,6 +266,12 @@ button {
 .recaptcha-container .g-recaptcha {
   border: 0.6rem $primaryColor outset;
 }
+/* Styles to show that links and buttons are disabled */
+.disabled {
+  pointer-events: none;
+  opacity: 0.5;
+  cursor: not-allowed;
+}
 // Responsivness
 @media screen and (max-width: 1200px) {
   .sub-menu ul {
