--- a/Styles/style.css
+++ b/Styles/style.css
@@ -307,6 +307,13 @@ button:hover {
   border: 0.6rem #a009f7 outset;
 }
 
+/* Styles to show that links and buttons are disabled */
+.disabled {
+  pointer-events: none;
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
 @media screen and (max-width: 1200px) {
   .sub-menu ul {
     display: flex;
