--- a/Styles/_basicSettings.scss
+++ b/Styles/_basicSettings.scss
@@ -242,6 +242,8 @@ button {
 }
 .disabled-link {
   pointer-events: none;
+  cursor: not-allowed;
+
   opacity: 0.5;
 }
 
@@ -266,6 +268,45 @@ button {
   opacity: 0.5;
   cursor: not-allowed;
 }
+.disabled:hover {
+  cursor: not-allowed;
+
+}
+
+/* Style the sticky note */
+.sticky-note {
+  background-color: $paragraph-BG;
+  border: $primaryColor .3rem outset;
+  font-size: 2rem;
+  position: fixed;
+  top: 2rem;
+  left: 2rem;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  box-shadow: $mainShadow;
+  font-size: 1.3rem;
+  color: #4e484e;
+  z-index: 9999;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+}
+
+/* Optional: Add a close button (can be hidden when CAPTCHA is completed) */
+.sticky-note p {
+  margin: 0;
+}
+
+// .sticky-note button {
+//   position: absolute;
+//   top: .5rem;
+//   right: .5rem;
+//   background-color: $form-BG;
+//   border: $form-BG .3rem outset;
+//   font-size: 2rem;
+//   cursor: pointer;
+//   color: #333;
+// }
+
 // Responsivness
 @media screen and (max-width: 1200px) {
   .sub-menu ul {
