--- a/Styles/style.css
+++ b/Styles/style.css
@@ -315,7 +315,7 @@ button:hover {
   font-size: 2rem;
   position: fixed;
   top: 2rem;
-  left: 2rem;
+  left: 1rem;
   padding: 1.5rem;
   border-radius: 1rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -324,6 +324,7 @@ button:hover {
   z-index: 9999;
   opacity: 1;
   transition: opacity 0.3s ease-in-out;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px, 2px 2px 2px rgba(255, 255, 255, 0.04);
 }
 
 /* Optional: Add a close button (can be hidden when CAPTCHA is completed) */
