--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -12,4 +12,5 @@
 @import "./cursor";
 @import "./sharingToggle";
 @import "./timelineStyle";
+@import "./fontsNIcons";
 // Style.scss - the main scss file.
