--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1943,13 +1943,13 @@ a:hover ~ .custom-cursor {
 }
 @font-face {
   font-family: "Kalam";
-  src: url("../fonts/kalam-regular-webfont.woff2") format("woff2"), url("../fonts/kalam-regular.woff") format("woff"), url("../fonts/kalam-regular.ttf") format("truetype");
+  src: url("../fonts/kalam-regular-webfont.woff2") format("woff2"), url("../fonts/kalam-regular-webfont.woff") format("woff"), url("../fonts/kalam-regular.ttf") format("truetype");
 }
 @font-face {
   font-family: "Courgette";
-  src: url("../fonts/courgette-regular.woff2") format("woff2"), url("../fonts/courgette-regular.woff") format("woff"), url("../fonts/courgette-regular.ttf") format("truetype");
+  src: url("../fonts/courgette-regular-webfont.woff2") format("woff2"), url("../fonts/courgette-regular-webfont.woff") format("woff"), url("../fonts/courgette-regular.ttf") format("truetype");
 }
 @font-face {
   font-family: "Poetsen One";
-  src: url("../fonts/poetsenone-regular.woff2") format("woff2"), url("../fonts/poetsenone-regular.woff") format("woff"), url("../fonts/poetsenone-regular.ttf") format("truetype");
+  src: url("../fonts/poetsenone-regular-webfont.woff2") format("woff2"), url("../fonts/poetsenone-regular-webfont.woff") format("woff"), url("../fonts/poetsenone-regular.ttf") format("truetype");
 }/*# sourceMappingURL=style.css.map */
