--- a/Styles/_headerNfooter.scss
+++ b/Styles/_headerNfooter.scss
@@ -21,6 +21,7 @@ header {
     display: none;
     padding: 0;
     width: 35%;
+    height: auto;
     margin: 2% 35%;
     position: relative;
     z-index: 500;
@@ -39,6 +40,7 @@ header {
     display: block;
     padding: 0;
     width: 25%;
+    height: auto;
     margin: 2% 35%;
     position: relative;
     z-index: 100;
