updated link-checker script

--- a/Styles/_basicSettings.scss
+++ b/Styles/_basicSettings.scss
@@ -16,6 +16,9 @@
   font-size: 100%;
   color-scheme: light;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Courgette", cursive;
   background-image: $bodyBg;
