--- a/Styles/style.css
+++ b/Styles/style.css
@@ -45,6 +45,10 @@
   color-scheme: light;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Courgette", cursive;
   background-image: linear-gradient(-45deg, rgb(241, 50, 216), rgb(208, 98, 230), rgb(124, 197, 245), rgb(158, 158, 235), rgb(255, 0, 221));
