--- a/Styles/style.css
+++ b/Styles/style.css
@@ -75,7 +75,8 @@ section {
 
 h2,
 h3,
-h4 {
+h4,
+h5 {
   display: inline;
   position: relative;
   z-index: 900;
@@ -131,12 +132,7 @@ html[lang=de][data-page=contact-german] h4 {
 h5 {
   font-size: xx-large;
   font-weight: bolder;
-  color: #443e3e;
   margin-bottom: 1rem;
-}
-h5:hover {
-  color: #530680;
-  transition: 2s;
 }
 
 /* Settings and designs for all paragraphs in the website */
@@ -935,15 +931,26 @@ html[data-page=index-german] .h4-title {
   }
 }
 /* Settings and design of "skills and tools" section */
-.tools-set,
-.skills-set {
+.skills-categories,
+.languages-items,
+.skill-items {
   display: flex;
-  flex-direction: row;
   justify-content: center;
+  align-items: center;
+  position: relative;
   flex-wrap: wrap;
 }
 
-.tool,
+.skills-set {
+  flex-direction: column;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 50%;
+  min-height: 30rem;
+}
+
 .skill {
   display: flex;
   flex-direction: column;
@@ -955,14 +962,15 @@ html[data-page=index-german] .h4-title {
   border-radius: 5rem;
   box-sizing: border-box;
 }
-.tool i,
+.skill .svg-icon {
+  font-size: 4rem;
+}
 .skill i {
   font-size: 2rem;
   color: #fff;
   padding: 1rem;
   border-radius: 5rem;
 }
-.tool i:first-child,
 .skill i:first-child {
   width: 5rem;
   height: 4rem;
@@ -972,7 +980,6 @@ html[data-page=index-german] .h4-title {
   background-size: 300% 300%;
   animation: gradient 15s ease infinite;
 }
-.tool i:first-child:hover,
 .skill i:first-child:hover {
   display: flex;
   justify-content: center;
@@ -983,14 +990,12 @@ html[data-page=index-german] .h4-title {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   transition: 1s;
 }
-.tool i:hover,
 .skill i:hover {
   font-size: 3rem;
   color: #ffffff;
   transition: 1s;
   text-shadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7, 0 6px 6px rgba(79, 164, 250, 0.7215686275);
 }
-.tool p,
 .skill p {
   display: flex;
   justify-content: center;
@@ -1000,12 +1005,79 @@ html[data-page=index-german] .h4-title {
   margin: 1rem 0 0 0;
   height: 3rem;
 }
-.tool p:hover,
 .skill p:hover {
   font-size: larger;
   font-weight: 900;
 }
 
+.language-item,
+.languages-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
+.language-item {
+  flex-direction: column;
+  margin: 3rem;
+}
+.language-item p {
+  padding: 0;
+  font-size: 3rem;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 1rem;
+}
+.language-item .language-parameter {
+  height: 2rem;
+  width: 12rem;
+  border: outset 0.3rem rgba(242, 215, 255, 0.6705882353);
+  border-radius: 1rem;
+  margin-top: -1rem;
+  margin-bottom: 5rem;
+}
+.language-item .language-parameter p {
+  font-size: 2rem;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px, 2px 2px 2px rgba(255, 255, 255, 0.04);
+  margin: 3rem 0;
+}
+.language-item .english-parameter {
+  background-image: linear-gradient(to right, #a009f7, #a009f7, rgba(242, 215, 255, 0.6705882353));
+}
+.language-item .german-parameter {
+  background-image: linear-gradient(to right, #a009f7, #a009f7, #a009f7, rgba(242, 215, 255, 0.6705882353), rgba(242, 215, 255, 0.6705882353));
+}
+.language-item .hebrew-parameter {
+  background-color: #a009f7;
+}
+
+.language-emoji {
+  border-radius: 50%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  width: 6rem;
+  height: 6rem;
+  border: outset 0.3rem rgba(242, 215, 255, 0.6705882353);
+}
+.language-emoji:hover {
+  border: #a009f7 outset 0.3rem;
+}
+
+@media screen and (max-width: 480px) and (orientation: portrait) {
+  .skills-categories {
+    flex-direction: column;
+    width: 100%;
+  }
+  .skills-set {
+    width: 100%;
+  }
+}
 /* outer right cyan */
 /* Settings and design for all contact options */
 .contact-options-divs {
