--- a/Styles/style.css
+++ b/Styles/style.css
@@ -969,13 +969,12 @@ html[data-page=index-german] .h4-title {
   justify-content: center;
   align-items: center;
   text-align: center;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px, 2px 2px 2px rgba(255, 255, 255, 0.04);
   padding: 0 1rem;
   margin: 1rem 0 0 0;
   height: 3rem;
-}
-.skill p:hover {
-  font-size: larger;
   font-weight: 900;
+  letter-spacing: 0.1rem;
 }
 
 .language-item,
